<resources>
    <string name="app_name">Wrocław: Most Agentów</string>
    <string name="haveAccount">Mam konto</string>
    <string name="register">Zarejestruj się</string>
    <string name="registerButton">Zarejestruj się</string>
    <string name="coordinatesText">_ _° _ _ . _ _ _ " N _ _° _ _ . _ _ _ " E</string>
    <string name="coordinates">Współrzędne</string>
    <string name="coordinatesTextCloser">_ _° _ _ . _ _ _ " N \n_ _° _ _ . _ _ _ " E</string>
    <string name="ok">OK</string>
    <string name="signIn">Zaloguj się</string>
    <string name="signInButton">Zaloguj</string>
    <string name="userName">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="close">X</string>
    <string name="Udalo_sie">Udało się!</string>
    <string name="Udalo_sie_info">Udaj się do wskazanej lokacji aby zakończyć rozgrywkę!</string>
    <string name="Czy_wiesz_ze">Czy wiesz że?</string>
    <string name="Zagadka">Zagadka</string>
    <string name="Zagadka_info">aaaaaa bbbbbbbbbbbbbbbb cccccccccccc ddddddddddddddd eeeeeeeeeeeee fffffffffffffff ggggggggggggg hhhh iiiiii jjjjjjjjjjjj</string>
    <string name="Brawo">Brawo!</string>
    <string name="Brawo_info">Twoja gra dobiegła końca. Teraz możesz zostać we Wrocławiu albo jechać zwiedzić resztę świata!
    </string>
    <string name="Gratulacje">Gratulacje, rozwiązałeś zagadkę!</string>
    <string name="Zla_odpowiedz">Zła odpowiedź, spróbuj ponownie</string>
    <string name="Zdjecie">Zrób zdjęcie</string>
    <string name="Idz_do">Idź w pobliże miejsca z zagadkami</string>
    <string name="Pusta_rejestracja">Login i hasło nie mogą być puste</string>
    <string name="rejestracja">Konto utworzone</string>
    <string name="LogIn">Udało się zalogować</string>
    <string name="LoginFailed">Błędny login lub hasło</string>
    <string name="Pytanie">[pytanie]</string>
    <string name="Odpowiedz">odpowiedź</string>
    <string name="userAccount">Konto użytkownika</string>
    <string name="DataBase_failure">Ups! Coś poszło nie tak.</string>
    <string name="uz_istnieje">Podany login jest zajęty</string>
    <string name="zamknij">Zamknij</string>
    <string name="superka">Super</string>
    <string name="ZdjecieZrobione">Zrobione zdjęcie</string>
    <string name="wyslij">Wyślij</string>
    <string name="ponow">Ponów</string>
    <string name="Wspolrzedne">57° 12.123N 14° 98.765E</string>
    <string name="nazwaZagadki">Nazwa odznaki</string>
    <string name="opisZagadki">Opis odznaki</string>
    <string name="Zagadka_w_poblizu">Zagadka typu znajdź punkt w okolicy</string>
    <string name="odznaki">Postępy</string>
    <string name="title_activity_maps2">Map</string>
    <string name="settings">Ustawienia</string>
    <string name="darkMode">Dark mode</string>
    <string name="dzwiek">Dźwięk</string>
    <string name="powiadomienia">Powiadomienia</string>
    <string name="wibracje">Wibracje</string>
    <string name="postep">Postęp w grze</string>
    <string name="loading">Weryfikacja</string>
    <string name="NotifyCh">Dźwięk i wibracje</string>
    <string name="NotifyD">Powiadomienia zawierają dźwięk i wibracje</string>
    <string name="NotifyCh2">Tylko dźwięk</string>
    <string name="NotifyD2">Powiadomienia zawierają dźwięk</string>
    <string name="NotifyCh3">Wibracje</string>
    <string name="NotifyD3">Powiadomienia zawierają same wibracje</string>
    <string name="NotifyCh4">Ciche powiadomienia</string>
    <string name="NotifyD4">Powiadomienia tylko pojawiają się na ekranie </string>
    <string name="juz">Już jestem!</string>
    <string name="Fabula">"Pewnego dnia przeglądając aplikacje w telefonie zauważasz coś czego wcześniej nie widziałeś. \nKiedy już miałeś usunąć tą nieznaną aplikację dostałeś wiadomość:  \n“NIE RÓB TEGO!!!” \n“Potrzebuję twojej pomocy”  \nKiedy tymi wiadomościami wzbudził twoje zaciekawienie dostałeś kolejną wiadomość tym razem dłuższą.  \n“Drogi nieznajomy potrzebuję twojej pomocy aby się wydostać z Wrocławia. Pomożesz mi?  \nA.S. Mark. "</string>
    <string name="Fabula2">"Dziękuję wiedziałem że mogę na ciebie liczyć. \nPewnie masz wiele pytań co do mnie. \nPostaram się odpowiedzieć w trakcie wykonywania zadań. "</string>
    <string name="tak">TAK</string>
    <string name="nie">NIE</string>
    <string name="nazwaCiekawostki"></string>
</resources>
