<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:padding="15dp"
    android:background="@drawable/popupbackground"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/closePytanieGora"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="end"
        android:background="@drawable/closebutton"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/Zagadka_info"
        android:textColor="#111111ff"
        android:textSize="5dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/photoPytanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/pytanie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/Pytanie"
                android:textColor="@color/textColor"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/odpowiedz_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/azure"
                android:ems="10"
                android:hint="@string/Odpowiedz"
                android:inputType="textPersonName"
                android:textColorHint="@color/blue"
                android:visibility="visible" />

            <TextView
                android:id="@+id/popup_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/coordinatesTextCloser"
                android:textColor="@color/textColor"
                android:textSize="24dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/closePytanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonbackgroundonstartpage"
                android:text="@string/ok"
                android:textColor="@color/textColor"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>