<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:padding="15dp"
    android:background="@drawable/popupbackground"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pytanie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Pytanie"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/odpowiedz_editTex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/azure"
        android:hint="@string/Odpowiedz"
        android:textColorHint="@color/blue"
        />

    <Button
        android:id="@+id/closePytanie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textColor"
        android:background="@drawable/buttonbackgroundonstartpage"
        />

</LinearLayout>