<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:padding="15dp"
    android:background="@drawable/popupbackground"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/zrobioneZdjecie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Zdjecie"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/odpowiedz_editTex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="gone" />

    <TextView
        android:id="@+id/udalo_sie_opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/Zagadka_info"
        android:textColor="#111111ff"
        android:textSize="5dp"
         />

    <Button
        android:id="@+id/wyslijZdjecie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textColor"
        android:background="@drawable/buttonbackgroundonstartpage"
        />

</LinearLayout>