<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:padding="15dp"
    android:background="@drawable/popupbackground"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nazwaOdznaki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/nazwaZagadki"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/obrazOdznaka"
        android:layout_width="match_parent"
        android:layout_height="179dp"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/opisOdznaki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/opisZagadki"
        android:textColor="@color/textColor"
        android:textSize="15dp" />

    <Button
        android:id="@+id/closeOdznaka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonbackgroundonstartpage"
        android:text="@string/zamknij"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

</LinearLayout>