<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:padding="15dp"
    android:background="@drawable/popupbackground"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/closeIdzDoGora"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="end"
        android:background="@drawable/closebutton"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/idzDo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Idz_do"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/dotarcieNaMiejceZdj"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="280dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/closeIdzDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/juz"
        android:textSize="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textColor"
        android:background="@drawable/buttonbackgroundonstartpage"
        />

</LinearLayout>